2011-08-14 Matthias Scholz <ms@jammerhund.de>
	* BlendLineStringsPlugIn
		* some Enhancements: choice if the source linestrings are deleted and
		  if a new layer with the reluts are created
		* Bugfix: if the result was more then one blended linestring, then all
		  linestrings had the attributes from the first selected linestring and
		  not from the first blended

2011-07-31 mmichaud <michael.michaud@free.fr>
    * Fix/improve ColorThemingStylePanel. The main option is now attribute
      Attribute choice will decide which classification methods are allowed

2011-07-25 mmichaud <michael.michaud@free.fr>
    * Fix/improve reverse function in GeometryFunctionPlugIn [ID 3360102]
      Now works on a clone without modifying source geometry and works on any
      kind of geometry.

2011-07-25 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in ColorThemingStylePanel.
    * Add an Icon for SaveLayersWithoutDataSourcePlugIn

2011-07-24 mmichaud <michael.michaud@free.fr>
    * Fixed a bug related to tables having same names in public schema and
      another schema [ID 3303503]

2011-07-14 mmichaud <michael.michaud@free.fr>
    * Better exception handling while using the new OpenWizard framework
    * Turn code to 1.4.2alpha
    
2011-07-10 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in the look and feel option panel [bug ID: 3354118]

        **** release of OpenJUMP 1.4.1 (svn 2313) ****

2011-07-04 mmichaud <michael.michaud@free.fr>
    * Fix a bug preventing to read old project files

        **** release of OpenJUMP 1.4.1 (svn 2300) ****

2011-07-02 mmichaud <michael.michaud@free.fr>
    * Fixex regex in SaveFileDataSourceQueryChooser to allow directory names
      containing points
    * Activate SaveLayersWithoutDataSourcePlugIn in default plugins

2011-06-29 mmichaud <michael.michaud@free.fr>
    * revert change made on WMS-getMapRequest (see ID: 3327322 and
      Jukka's remark on the JPP developper list)

2011-06-27 edgard soldin