@@ -1,3 +1,12 @@
+2011-08-25 mmichaud <michael.michaud@free.fr>
+    * Move AddImageLayerPlugIn to File menu
+    * Move RunDatastoreQueryPlugIn to File menu
+    * Center dialog box on OpenJUMP windows for following plugins (using
+      GUIUtil.centreOnWindow)
+        * GUIUtil : adds a method to pack the dialog box before centering it 
+        * Edit>Selection>Select by geometry type
+        * Tools>Edit Geometry>Blend LineStrings
+
 2011-08-14 Matthias Scholz <ms@jammerhund.de>
 	* BlendLineStringsPlugIn
 		* some Enhancements: choice if the source linestrings are deleted and
